--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 	display: none;
 }
 
-/* body #doc { */
-/* -webkit-transition: .6s */
-/* } */
+body #doc {
+-webkit-transition: .6s
+}
 
-/* body div:first-child#doc { */
-	/* opacity: 0; */
-/* } */
+body div:first-child#doc {
+	opacity: 0;
+}
